--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@ body {
     @apply flex items-center justify-start;
   }
   .card-wrapper {
-    @apply bg-light-900 dark:dark-gradient shadow-light-100 dar;
+    @apply dark:dark-gradient dar bg-light-900 shadow-light-100;
   }
   .btn {
     @apply bg-light-800 dark:bg-dark-300 !important;
@@ -28,7 +28,7 @@ body {
     @apply bg-light-700 dark:bg-dark-300 !important;
   }
   .markdown {
-    @apply prose dark:prose-p:text-light-700 dark:pros max-w-full;
+    @apply dark:pros prose max-w-full dark:prose-p:text-light-700;
   }
   .primary-gradient {
     background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
@@ -41,7 +41,7 @@ body {
     );
   }
   .tab {
-    @apply dark:bg-dark-400 bg-light-800 text-light-5 min-h-full;
+    @apply text-light-5 min-h-full bg-light-800 dark:bg-dark-400;
   }
 }
 .no-focus {
